--- a/html/options.html
+++ b/html/options.html
@@ -14,7 +14,7 @@
 
     <div class="options">
         <label class="switch">
-        <input type="checkbox">
+        <input id="useDarkMode" type="checkbox">
         <span class="slider round"></span>
         </label>
 
