options no new tab

--- a/html/options.html
+++ b/html/options.html
@@ -9,7 +9,7 @@
 <body>
     <div class="title">
         <img id="logo" class="logo">
-        <span class="pageTitle">Search But Better Settings</span>
+        <span class="pageTitle">Settings</span>
     </div>
 
     <div class="options">
