dark theme in options

--- a/html/options.html
+++ b/html/options.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/options.css">
     <script src="../js/options.js"></script>
 </head>
